@@ -1,3 +1,6 @@
+2023-02-04  Markus Gans  <guru.mail@muenster.de>
+	* Adapted color reset for st - simple terminal
+
 2023-01-29  Markus Gans  <guru.mail@muenster.de>
 	* Fixed invalid iterator on post-inserting an item in FListView
 	* The application will now be notified when the focus changes in 
